--- a/static/styles/right-sidebar.css
+++ b/static/styles/right-sidebar.css
@@ -1,6 +1,5 @@
 .right-sidebar {
     -webkit-font-smoothing: antialiased;
-    color: #555;
 }
 
 #group-pms li:hover,
